# entan-mkdocs

./: .coverage  .dockerignore  .gitignore  .sesskey  404.html  CLAUDE.md  Dockerfile  Dockerfile-nonRailway  Dockerfile.dev  README.md  atest.py  center_machines.py  conthtmx-ai28.md  countoken.py  design-v1.md  docker-compose.dev.yml  docker-compose.yml  entangled.toml  entangled_cli-2.1.12-py3-none-any.whl  gongUsers.db  index.html  index.md  install-mkdocs.ps1  main.py  mkdocs.yml  myFasthtml.py  pyproject.toml  pytest.ini  railway.toml  requirements.txt  search.html  sitemap.xml  tach.toml  testSSE.py  upload_demo.py  watcher.ps1  winwatch.ps1  z-database.ipynb  z-state-mach.ipynb  zanalysis.ipynb  (+2 more)
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.staging.yml  docker-compose.vscodedev.yml  docker-compose.yml
.entangled/: filedb.json
.github/: dependabot.yml
calendar-project/: index.html  script.js  styles.css
data/: Mahi.xlsx  Pajjota.db  Pajjota.xlsx  Testx.xlsx  Testy.xlsx  Usertest.xlsx  all_centers.xlsx  course_type_map.csv  course_type_map.xlsx  dhamma_org.xlsx  gongUsers.db  gongUsers.db-shm  gongUsers.db-wal  info.json  mahi.ok-old.db  mahi.ok.db  mahi.old.db  mahi.sending.db  pajjota.ok-old.db  pajjota.ok.db  pajjota.old.db  pajjota.sending.db  settings.json  test22.json  testx.ok.db  testx.old.db  testx.sending.db  testy.db  testy.ok.db  testy.old.db  testy.sending.db  usertest.ok.db  usertest.old.db  usertest.sending.db  zone-10.ok.db  zone-10.old.db  zone-10.sending.db  zone-10.xlsx
deploy/: Caddyfile  compose.yaml  env.example
docs/: authenticate.md  dashboard.md  gongprog.md  index.md  utilities.md
images/: CenterState.dot  center.graphml  centers.xdot  gong.dot
libs/: __init__.py  adchan.py  admin.py  auth.py  authpass.py  cdash.py  consul.py  dbset.py  feedb.py  fetch.py  messages.py  minio.py  plancheck.py  planning.py  send2pi.py  states.py  timechan.py  timings.py  transit.py  utils.py  utilsJS.py
md-text/: about-the-digital-gong-app.md  admin-show.md  attention-to-center-config.md  consult-t.md  home-t.md  (+14 more)
(+222 files in other folders)
