[project]
name = "entan-mkdocs"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.12.8"
dependencies = [
    "python-fasthtml>=0.12.41",
    "uvicorn>=0.40.0",
    "fastsql>=2.1.2",
    "psycopg2-binary>=2.9.11",
    "aiohttp>=3.13.3",
    "bcrypt==4.0.1",
    "httpx>=0.28.1",
    "markdown2>=2.5.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "paramiko>=4.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-statemachine>=3.0.0",
    "resend>=2.19.0",
    "scp>=0.15.0",
    "tabulate>=0.9.0"
]
